@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.20 ===
+* Added Hold option to the dspu::Compressor module.
 * Fixed RLC implementation of allpass filters.
 * Added support of LR2 (12 dB/oct) filters by the Crossover.
 * Updated build scripts.
